--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>com.griefcraft.lwc</groupId>
     <artifactId>Modern-LWC</artifactId>
     <name>Modern-LWC</name>
-    <version>2.1.1</version>
+    <version>2.1.2</version>
     <description>The unofficial continuation of LWC with support for modern versions of Minecraft.</description>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -36,15 +36,15 @@
         </dependency>
         <dependency>
             <groupId>com.sk89q.worldedit</groupId>
-            <artifactId>worldedit</artifactId>
-            <version>7.0-SNAPSHOT</version>
+            <artifactId>worldedit-bukkit</artifactId>
+            <version>7.0.0-SNAPSHOT</version>
             <scope>provided</scope>
             <type>jar</type>
         </dependency>
         <dependency>
             <groupId>com.sk89q.worldguard</groupId>
             <artifactId>worldguard-legacy</artifactId>
-            <version>7.0-SNAPSHOT</version>
+            <version>7.0.0-SNAPSHOT</version>
             <scope>provided</scope>
             <type>jar</type>
         </dependency>
